app/main/default/objects/Case/Case.object-meta.xml
<CustomObject>
    <businessProcesses>
        <fullName>test</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssetId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backup_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Backup External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Unique_Id__c</fullName>
        <label>Backup Unique Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessHoursId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseMetaDataTesting__c</fullName>
        <description>used Only in MetaData modify Functionality</description>
        <label>CaseMetaDataTesting</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedDate</fullName>
    </fields>
    <fields>
        <fullName>Comments</fullName>
    </fields>
    <fields>
        <fullName>ContactEmail</fullName>
    </fields>
    <fields>
        <fullName>ContactFax</fullName>
    </fields>
    <fields>
        <fullName>ContactId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactMobile</fullName>
    </fields>
    <fields>
        <fullName>ContactPhone</fullName>
    </fields>
    <fields>
        <fullName>Description</fullName>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntitlementId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsClosedOnCreate</fullName>
    </fields>
    <fields>
        <fullName>IsEscalated</fullName>
    </fields>
    <fields>
        <fullName>IsStopped</fullName>
    </fields>
    <fields>
        <fullName>MilestoneStatus</fullName>
    </fields>
    <fields>
        <fullName>MilestoneStatusIcon</fullName>
    </fields>
    <fields>
        <fullName>Origin</fullName>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OwnerId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority</fullName>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason</fullName>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceContractId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SlaExitDate</fullName>
    </fields>
    <fields>
        <fullName>SlaStartDate</fullName>
    </fields>
    <fields>
        <fullName>SourceId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status</fullName>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StopStartDate</fullName>
    </fields>
    <fields>
        <fullName>Subject</fullName>
    </fields>
    <fields>
        <fullName>SuppliedCompany</fullName>
    </fields>
    <fields>
        <fullName>SuppliedEmail</fullName>
    </fields>
    <fields>
        <fullName>SuppliedName</fullName>
    </fields>
    <fields>
        <fullName>SuppliedPhone</fullName>
    </fields>
    <fields>
        <fullName>Type</fullName>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>InternationalEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Escalations</label>
        <queue>InternationalEscalations</queue>
    </listViews>
    <listViews>
        <fullName>InternationalPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Platinum/Gold</label>
        <queue>InternationalPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>InternationalSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Silver/Bronze</label>
        <queue>InternationalSilverBronze</queue>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>PartnerRelations</fullName>
        <filterScope>Queue</filterScope>
        <label>Partner Relations</label>
        <queue>PartnerRelations</queue>
    </listViews>
    <listViews>
        <fullName>USEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Escalations</label>
        <queue>USEscalations</queue>
    </listViews>
    <listViews>
        <fullName>USPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Platinum/Gold</label>
        <queue>USPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>USSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Silver/Bronze</label>
        <queue>USSilverBronze</queue>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>