app/main/default/objects/Case/fields/Backup_Unique_Id__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Backup_Unique_Id__c</fullName>
        <label>Backup Unique Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>