app/main/default/objects/Case/fields/CaseMetaDataTesting__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>CaseMetaDataTesting__c</fullName>
        <description>used Only in MetaData modify Functionality</description>
        <label>CaseMetaDataTesting</label>
        <length>225</length>
        <type>Text</type>
    </fields>
</CustomObject>