app/main/default/objects/Case/fields/EngineeringReqNumber__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
</CustomObject>