app/main/default/objects/Case/listViews/InternationalEscalations.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>InternationalEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Escalations</label>
        <queue>InternationalEscalations</queue>
    </listViews>
</CustomObject>