app/main/default/objects/Case/listViews/InternationalPlatinumGold.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>InternationalPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Platinum/Gold</label>
        <queue>InternationalPlatinumGold</queue>
    </listViews>
</CustomObject>