app/main/default/objects/Case/listViews/InternationalSilverBronze.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>InternationalSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Silver/Bronze</label>
        <queue>InternationalSilverBronze</queue>
    </listViews>
</CustomObject>