app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
</CustomObject>