app/main/default/objects/Case/listViews/PartnerRelations.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>PartnerRelations</fullName>
        <filterScope>Queue</filterScope>
        <label>Partner Relations</label>
        <queue>PartnerRelations</queue>
    </listViews>
</CustomObject>