app/main/default/objects/Case/listViews/USEscalations.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>USEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Escalations</label>
        <queue>USEscalations</queue>
    </listViews>
</CustomObject>