app/main/default/objects/Case/listViews/USPlatinumGold.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>USPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Platinum/Gold</label>
        <queue>USPlatinumGold</queue>
    </listViews>
</CustomObject>