app/main/default/objects/Case/listViews/USSilverBronze.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>USSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Silver/Bronze</label>
        <queue>USSilverBronze</queue>
    </listViews>
</CustomObject>